Fixed spacing between ul and images

--- a/Sources/sass/styles.sass
+++ b/Sources/sass/styles.sass
@@ -1,6 +1,6 @@
 @charset "utf-8"
 
-@import url('https://fonts.googleapis.com/css2?family=Recursive:wght,CASL,CRSV@300..800,0..1,1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Recursive:wght,CASL,CRSV@300..800,0..1,1&display=swap')
 
 $purple: #522f9c
 $text: #161616
@@ -177,8 +177,13 @@ section.text
     margin: 0 auto
     flex: 1 1 0
 
-    img
-        border-radius: 0.2rem
+    picture
+        & ~ ul
+            margin: 0 0 1rem
+
+        img
+            margin: 1rem 0 0
+            border-radius: 0.2rem
 
 footer
     text-align: center
